<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_more"
    tools:context=".download.DownloadFragment">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/video_list"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/download_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/delete_all_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view" />

    <TextView
        android:id="@+id/tip_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_download"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delete_all_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/shape_accent_button"
        android:gravity="center"
        android:text="@string/delete_all"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/clean_view"
        app:layout_constraintEnd_toStartOf="@id/pause_all_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pause_all_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/shape_accent_button"
        android:gravity="center"
        android:text="@string/pause_all"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/clean_view"
        app:layout_constraintEnd_toStartOf="@id/start_all_view"
        app:layout_constraintStart_toEndOf="@id/delete_all_view" />

    <TextView
        android:id="@+id/start_all_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/shape_accent_button"
        android:gravity="center"
        android:text="@string/start_all"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/clean_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pause_all_view" />

    <TextView
        android:id="@+id/mem_info_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/clean_view"
        app:layout_constraintEnd_toStartOf="@id/mem_info_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/clean_view" />

    <ProgressBar
        android:id="@+id/mem_info_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="@id/clean_view"
        app:layout_constraintEnd_toStartOf="@id/clean_view"
        app:layout_constraintStart_toEndOf="@id/mem_info_view"
        app:layout_constraintTop_toTopOf="@id/clean_view" />

    <TextView
        android:id="@+id/clean_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_accent_button"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:text="@string/clean_cache"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mem_info_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>