<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".download.DownloadFragment">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/video_list"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/download_item_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_more"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_more"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/delete_all_view"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_accent_button"
            android:gravity="center"
            android:text="@string/delete_all"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/pause_all_view"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_accent_button"
            android:gravity="center"
            android:text="@string/pause_all"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/start_all_view"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_accent_button"
            android:gravity="center"
            android:text="@string/start_all"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>