<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".search.SearchVideoActivity">

    <!-- 搜索栏 -->
    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/shape_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@id/search_view"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_search"
            app:tint="#AAAAAA" />

        <EditText
            android:id="@+id/input_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/search_tip"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_search_para"
        android:backgroundTint="#EA6853"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/search_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_container"
        app:layout_constraintTop_toTopOf="@id/search_container" />

    <!-- 横幅广告 -->
    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_container" />

    <TextView
        android:id="@+id/history_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="start|center_vertical"
        android:text="@string/search_history"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_banner" />

    <TextView
        android:id="@+id/delete_all_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/delete_all"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/finish_view"
        app:layout_constraintTop_toBottomOf="@id/iv_banner" />

    <TextView
        android:id="@+id/finish_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/finish"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_banner" />

    <ImageView
        android:id="@+id/delete_view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_banner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_history_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/recommend_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_label" />

    <!-- 推荐搜索标题 -->
    <TextView
        android:id="@+id/recommend_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="start|center_vertical"
        android:text="推荐搜索"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_history_view" />

    <!-- 推荐搜索关键词 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommend_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/tab_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommend_label" />

    <!-- 分类标签TabLayout -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommend_search_view"
        app:tabIndicatorColor="@color/main"
        app:tabPaddingTop="3dp"
        app:tabPaddingBottom="3dp"
        app:tabPaddingStart="3dp"
        app:tabPaddingEnd="3dp"
        app:tabSelectedTextColor="@color/main"
        app:tabTextAppearance="@style/TabTextAppearance" />

    <!-- ViewPager2 for category content -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_category" />
</androidx.constraintlayout.widget.ConstraintLayout>